--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   },
   "type": "module",
   "dependencies": {
-    "@common-module/app-components": "^0.1.0"
+    "@common-module/wallet": "^0.1.6",
+    "@reown/appkit": "^1.3.2",
+    "@reown/appkit-adapter-wagmi": "^1.3.2",
+    "@reown/appkit-siwe": "^1.3.2",
+    "siwe": "^2.3.2",
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.32"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
