--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "scripts": {
-    "webpack": "node --loader ts-node/esm node_modules/webpack-cli/bin/cli.js --mode development --watch --config webpack.config.ts"
+    "webpack": "node node_modules/webpack-cli/bin/cli.js --mode development --watch --config webpack.config.ts",
+    "webpack-prod": "node node_modules/webpack-cli/bin/cli.js --mode production --config webpack.config.prod.ts"
   },
   "type": "module",
   "dependencies": {
-    "@common-module/wallet": "^0.1.6",
-    "@reown/appkit": "^1.3.2",
-    "@reown/appkit-adapter-wagmi": "^1.3.2",
+    "@common-module/wallet": "^0.1.7",
     "@reown/appkit-siwe": "^1.3.2",
-    "siwe": "^2.3.2",
-    "viem": "^2.21.45",
-    "wagmi": "^2.12.32"
+    "siwe": "^2.3.2"
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.9.0",
     "@types/webpack": "^5.28.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
