--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@common-module/wallet": "^0.1.7",
-    "@reown/appkit-siwe": "^1.3.2",
-    "siwe": "^2.3.2"
+    "@common-module/wallet-login": "^0.1.9"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
@@ -17,6 +15,7 @@
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "mini-css-extract-plugin": "^2.9.1",
+    "react": "^18.3.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
