--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   },
   "type": "module",
   "dependencies": {
-    "@common-module/wallet-login": "^0.1.9"
+    "@common-module/app-components": "^0.1.6",
+    "@common-module/supabase": "^0.1.7",
+    "@reown/appkit": "1.3.2",
+    "@reown/appkit-adapter-wagmi": "1.3.2",
+    "@reown/appkit-siwe": "1.3.2",
+    "siwe": "^2.3.2",
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.33"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
