--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "@reown/appkit": "1.3.2",
     "@reown/appkit-adapter-wagmi": "1.3.2",
     "@reown/appkit-siwe": "1.3.2",
-    "siwe": "^2.3.2",
-    "viem": "^2.21.45",
-    "wagmi": "^2.12.33"
+    "viem": "2.21.26",
+    "wagmi": "2.12.17"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
