--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@common-module/app-components": "^0.1.6",
-    "@common-module/supabase": "^0.1.7",
-    "@reown/appkit": "1.3.2",
-    "@reown/appkit-adapter-wagmi": "1.3.2",
-    "viem": "2.21.26",
-    "wagmi": "2.12.17"
+    "@common-module/wallet-login": "^0.2.0",
+    "@tanstack/react-query": "^5.60.5"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
