--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@common-module/wallet-login": "^0.2.0",
-    "@tanstack/react-query": "^5.60.5"
+    "@common-module/wallet-login": "^0.2.1",
+    "@wagmi/connectors": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
