--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^22.9.0",
     "@types/webpack": "^5.28.5",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "less": "^4.2.0",
